docs: reflect landed #141/#144 JDK 25 IR E2E on master
Record the four-fixture measurement (20/21 IR, hybrid constructor, JEP 472
warning) as one-VM evidence, not a JDK 25 support badge.

Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>